docs/deploy/prod/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-link-ingress
  namespace: mini-link-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: mini.link.com
      http:
        paths:
          # 前端项目 Service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # API 服务暴露给开发者调用
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
